# opusmeta

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: read_tags.rs
src/: lib.rs  picture.rs
