[package]
name = "opusmeta"
version = "1.1.0"
edition = "2021"
description = "A Rust crate for reading and writing metadata to opus files"
license = "MIT"
repository = "https://github.com/karx1/opusmeta"
homepage = "https://karx.xyz/projects/opusmeta"
exclude = ["examples/"]

[dependencies]
base64 = "0.22"
mime-sniffer = "0.1.2"
ogg = "0.9"
thiserror = "1"

[lints.clippy.pedantic]
level = "warn"
priority = -1

[lints.clippy]
nursery = "warn"
